--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "symfony/monolog-bundle": "^3.0",
     "symfony/proxy-manager-bridge": "5.2.*",
     "symfony/stopwatch": "5.2.*",
+    "symfony/string": "5.2.*",
     "symfony/twig-bundle": "5.2.*",
     "symfony/var-dumper": "5.2.*",
     "symfony/web-profiler-bundle": "5.2.*",
