--- a/config/services.yaml
+++ b/config/services.yaml
@@ -39,3 +39,7 @@ services:
         tags:
             - { name: 'doctrine.orm.entity_listener', event: 'prePersist', entity: 'App\Entity\Speciality' }
             - { name: 'doctrine.orm.entity_listener', event: 'preUpdate', entity: 'App\Entity\Speciality' }
+                
+    App\EntityListener\AdministratorEntityListener:
+        tags:
+            - { name: 'doctrine.orm.entity_listener', event: 'prePersist', entity: 'App\Entity\Administrator' }
