--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "doctrine/doctrine-migrations-bundle": "^3.0",
     "doctrine/orm": "^2.8",
     "easycorp/easyadmin-bundle": "^3.2",
+    "sensio/framework-extra-bundle": "^6.1",
     "symfony/console": "5.2.*",
     "symfony/debug-bundle": "5.2.*",
     "symfony/dotenv": "5.2.*",
