--- a/composer.json
+++ b/composer.json
@@ -7,27 +7,37 @@
     "php": ">=7.2.5",
     "ext-ctype": "*",
     "ext-iconv": "*",
+    "api-platform/core": "^2.6",
     "composer/package-versions-deprecated": "1.11.99.1",
+    "doctrine/annotations": "^1.0",
     "doctrine/doctrine-bundle": "^2.2",
     "doctrine/doctrine-migrations-bundle": "^3.0",
     "doctrine/orm": "^2.8",
     "easycorp/easyadmin-bundle": "^3.2",
     "knplabs/knp-paginator-bundle": "^5.4",
+    "nelmio/cors-bundle": "^2.1",
+    "phpdocumentor/reflection-docblock": "^5.2",
     "sensio/framework-extra-bundle": "^6.1",
+    "symfony/asset": "5.2.*",
     "symfony/console": "5.2.*",
     "symfony/debug-bundle": "5.2.*",
     "symfony/dotenv": "5.2.*",
+    "symfony/expression-language": "5.2.*",
     "symfony/flex": "^1.3.1",
     "symfony/framework-bundle": "5.2.*",
     "symfony/monolog-bundle": "^3.0",
+    "symfony/property-access": "5.2.*",
+    "symfony/property-info": "5.2.*",
     "symfony/proxy-manager-bridge": "5.2.*",
     "symfony/security-bundle": "5.2.*",
+    "symfony/serializer": "5.2.*",
     "symfony/stopwatch": "5.2.*",
     "symfony/string": "5.2.*",
     "symfony/twig-bundle": "5.2.*",
     "symfony/validator": "5.2.*",
     "symfony/var-dumper": "5.2.*",
     "symfony/web-profiler-bundle": "5.2.*",
+    "symfony/webpack-encore-bundle": "^1.11",
     "symfony/yaml": "5.2.*"
   },
   "config": {
