fix: correction de la configuration pour pouvoir charger les fixtures + la compilation avec yarn

--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,11 @@
         "composer/package-versions-deprecated": "1.11.99.1",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.2",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.8",
         "easycorp/easyadmin-bundle": "^3.2",
+        "fzaninotto/faker": "^1.9",
         "knplabs/knp-paginator-bundle": "^5.4",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
@@ -38,9 +40,7 @@
         "symfony/var-dumper": "5.2.*",
         "symfony/web-profiler-bundle": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.11",
-        "symfony/yaml": "5.2.*",
-        "doctrine/doctrine-fixtures-bundle": "^3.4",
-        "fzaninotto/faker": "^1.9"
+        "symfony/yaml": "5.2.*"
     },
     "config": {
         "optimize-autoloader": true,
